service sizes.

----------
mcadler     Date: Fri May  2 16:57:44 EDT 2008  CSN: CSN-platforms-111
                  Fri May  2 20:57:44 UTC 2008


Directory modules/bluespec/common/fpgaenv/virtual-platform/rrr/basic
 basic-rrr-common.bsh      Locally Modified          110 

Add a few Bluespec types for passing 72, 96 and 128 bit objects through RRR.
These can go away when we solve type specification for RRR.  Types are:
UMF_UINT72, UMF_UINT96 and UMF_UNIT128.

----------
jsemer      Date: Mon May  5 11:55:00 EDT 2008  CSN: CSN-platforms-112
                  Mon May  5 15:55:00 UTC 2008


Directory modules/bluespec/common/fpgaenv/virtual-platform/rrr/null
 null-rrr.bsv              Locally Modified          111 

Updated null RRR modules to conform to latest version of the RRR
interface.

----------
mcadler     Date: Fri May  9 09:37:24 EDT 2008  CSN: CSN-platforms-113
                  Fri May  9 13:37:24 UTC 2008


Directory modules/bluespec/common/fpgaenv/physical-platform/physical-devices/unix-pipe
 unix-pipe-device.cpp      Locally Modified          112 

Look for Bluesim and then Verilog simulation.

----------
jsemer      Date: Fri May  9 15:28:47 EDT 2008  CSN: CSN-platforms-114
                  Fri May  9 19:28:47 UTC 2008


Directory modules/bluespec/common/fpgaenv/virtual-platform/virtual-devices/front-panel/hybrid
 hybrid-fp.cpp             Locally Modified          113 

Directory modules/bluespec/common/fpgaenv/virtual-platform/virtual-devices/streams
 streams.dic               Locally Modified          113 
 hybrid-streams.cpp        Locally Modified          113 

Directory modules/bluespec/common/fpgaenv/physical-platform/physical-devices/unix-pipe
 unix-pipe-device.cpp      Locally Modified          113 

Use commands_switches.h rather than main.h to get command switch info.

Added a special message to the streams service STREAMS_MESSAGE_EXIT, which
takes an exit status as an argument and terminates the run when called.